# arrow

./: .gitignore  CLAUDE.md  README.md  TESTING.md  main.py  package-lock.json  test_server.py
.claude/: settings.local.json
arrow-client/: index.html  package-lock.json  package.json
arrow-client/src/: App.css  App.tsx  types.ts
arrow-client/src-tauri/: Cargo.toml  tauri.conf.json
arrow-client/src-tauri/src/: db_manager.rs  events.rs  lib.rs  notification_service.rs  postures.rs  tcp_client.rs  tests.rs
arrow-client/src/components/: ConnectionIndicator.tsx  PostureDisplay.tsx  SessionHistory.tsx  WeeklyStats.tsx
client/: Cargo.toml
client-backup/src/: main.rs
client/src/: db_manager.rs  index.html  main.js  main.rs  messages.rs  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: db_manager.rs  lib.rs  main.rs  postures.rs  python_server.rs  tcp_service.rs
server/: main.py
