[package]
name = "arrow"
version = "0.1.0"
description = "Posture monitoring application"
authors = ["Thibault"]
edition = "2021"

[lib]
name = "arrow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
dirs = "5.0.1"

